--- a/src/components/organisms/SlidePage/SlidePage.module.scss
+++ b/src/components/organisms/SlidePage/SlidePage.module.scss
@@ -1,6 +1,6 @@
 .wrap {
   width: 100%;
-  height: calc(100vh - 270px);
+  height: calc(100vh - 84px);
 }
 
 .slide {
@@ -16,6 +16,7 @@
   gap: 6px;
   width: 100%;
   height: 84px;
+  font-family: "VT323", monospace;
   background-color: gray;
 
   ul {
