--- a/src/components/templates/SlidePage/SlidePage.module.scss
+++ b/src/components/templates/SlidePage/SlidePage.module.scss
@@ -1,68 +1,8 @@
 .wrap {
   position: relative;
   width: 100%;
-  height: calc(100vh - 84px);
+  // height: calc(100vh - 84px);
+  height: 100vh;
 }
 
-.slide {
-  width: 100%;
-  height: 100%;
-}
 
-.eunjee {
-  z-index: 1;
-  position: absolute;
-  bottom: 80px;
-  left: 60px;
-
-  &.reverse {
-    transform: scaleX(-1);
-  }
-}
-
-.pagination {
-  padding-right: 10px;
-  padding-left: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-  width: 100%;
-  height: 84px;
-  font-family: "VT323", monospace;
-  background-color: gray;
-
-  ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: -6px;
-    max-width: 450px;
-    width: 100%;
-
-    li {
-      cursor: pointer;
-      color: #fff;
-
-      &.active {
-        font-weight: 600;
-      }
-    }
-  }
-
-  .progressBar {
-    display: flex;
-    padding: 10px;
-    max-width: 450px;
-    width: 100%;
-    height: 30px;
-    background-color: #fff;
-    border-radius: 4px;
-
-    .gauge {
-      background-color: #E46C0A;
-      transition: width 0.3s ease;
-    }
-  }
-}
