--- a/src/components/templates/Loading/Loading.module.scss
+++ b/src/components/templates/Loading/Loading.module.scss
@@ -1,18 +1,167 @@
+$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
+
 .wrap {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
   height: 100vh;
-  gap: 40px;
 
   opacity: 0;
-  animation: fadeOut ease-in-out 5s;
+  animation: fadeOut ease-in-out 4.9s;
 
   span {
-    color: #ff9915;
-    font-size: 20px;
-    font-weight: 500;
+    display: block;
+    font-weight: 300;
+    min-height: 24px;
+  }
+}
+
+.window {  
+  margin: 0.5rem;
+  max-width: 640px;
+  max-height: 280px;
+  width: 100%;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  background-color: #c0c0c0;
+  box-shadow: $box-shadow;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3px;
+  color: #fff;
+  font-weight: 300;
+  background: linear-gradient(90deg, #000b7c, #377cc6);
+
+  .button {
+    display: flex;
+    gap: 12px;
+    margin-right: 2px;
+
+    li {
+      cursor: pointer;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
+      position: relative;
+      background: #c0c0c0;
+      width: 1rem;
+      height: 1rem;
+      line-height: 1rem;
+      box-shadow: $box-shadow;
+
+      &::before {
+        position: absolute;
+        content: '';
+        background: black;
+      }
+
+      &:nth-child(1)::before {
+        bottom: 3px;
+        left: 4px;
+        width: 7px;
+        height: 3px;
+      }
+      &:nth-child(2) {
+        &::before,
+        &::after {
+          position: absolute;
+          content: '';
+          width: 0.3rem;
+          height: 0.25rem;
+          border: 2px solid black;
+          border-top: 3px solid black;
+          background: #c0c0c0;
+        }
+
+        &::before {
+          top: 1px;
+          left: 5px;
+          z-index: 1;
+        }
+
+        &::after {
+          top: 5px;
+          left: 1px;
+          z-index: 2;
+        }
+      }
+      &:nth-child(3) {
+        &::before {
+          content: "x";
+          left: 2px;
+          bottom: 2px;
+          color: #000;
+          font-size: 18px;
+          font-weight: 800;
+          background: #c0c0c0;
+        }
+      }
+    }
+  }
+}
+
+.contents {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+
+  img {
+    display: block;
+    max-width: 287px;
+    width: 100%;
+  }
+
+  .installBar {
+    border: 2px inset;
+    height: 1.5rem;
+    margin: 1rem 0;
+    display: flex; 
+
+    li {
+      background: #000b7c;
+      height: calc(100% - 4px);
+      width: 1.28rem;
+      margin: 0.125rem;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out; 
+
+      &.active {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .contents .installBar {
+    li {
+      &:nth-child(18),
+      &:nth-child(19),
+      &:nth-child(20),
+      &:nth-child(21),
+      &:nth-child(22),
+      &:nth-child(23),
+      &:nth-child(24),
+      &:nth-child(25) {
+        display: none;
+      }
+    }
+  }
+}
+
+@keyframes show {
+  to {
+    opacity: 0;
+  }
+
+  from {
+    opacity: 1;
   }
 }
 
@@ -21,7 +170,7 @@
     opacity: 1;
   }
 
-  90% {
+  80% {
     opacity: 1;
   }
 
