--- a/src/components/templates/Home/Home.module.scss
+++ b/src/components/templates/Home/Home.module.scss
@@ -82,6 +82,37 @@
   }
 }
 
+.modal {
+  position: absolute;
+  bottom: 0;
+  z-index: 10;
+  left: calc(50% + 100px);
+
+  .openModalButton {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    background: none;
+    border: none;
+    img {
+      display: block; 
+
+      &.speechBubble {
+        animation: fade 1s linear infinite;
+      }
+    }
+  }
+}
+
+@keyframes fade {
+  to {
+    opacity: 0;
+  }
+  from {
+    opacity: 1;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .itemWrap li {
     &.cloud_1 {display: none;}
