feat. home modal 하단 close 버튼 추가

--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -1,4 +1,5 @@
 $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
+
 .modal {
   position: fixed;
   top: 0;
@@ -13,8 +14,8 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   align-items: center;
   z-index: 2;
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
   visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 
   &.open {
     opacity: 1;
@@ -29,7 +30,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
 
 .modalContent {
   max-width: 640px;
-  max-height: 280px;
+  max-height: 480px;
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
@@ -113,5 +114,35 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
         }
       }
     }
+  }
+}
+
+.modalBody {
+  height: calc(100% - 24px);
+
+  &.hasOptionBar {
+    height: calc(100% - 58px);
+  }
+
+  &.hasBottomCloseButton {
+    height: calc(100% - 68px);
+  }
+}
+
+.buttonWrap {
+  display: flex;
+  justify-content: flex-end;
+  gap: 5px;
+  margin-right: 16px;
+  
+  button {
+    cursor: pointer;
+    width: 75px;
+    text-align: center;
+    padding: 5px 0;
+    border: 1px solid #131313;
+    border-top-color: #fff;
+    border-left-color: #fff;
+    background: #c0c0c0;
   }
 }
