--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -1,5 +1,15 @@
 $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
 
+@mixin volume {
+  background-color: #c0c0c0;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #373737;
+  border-top-color: #c0c0c0;
+  border-left-color: #c0c0c0;
+  box-shadow: inset 1px 1px #fff, inset -1px -1px #888;
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -29,13 +39,47 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
 }
 
 .modalContent {
-  max-width: 640px;
-  max-height: 480px;
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
   background-color: #c0c0c0;
   box-shadow: $box-shadow;
+
+  &.normal {
+    max-width: 640px;
+    max-height: 480px;
+  }
+
+  &.full {
+    max-width: 90%;
+    width: 1024px;
+    height: 90%;
+
+    .modalBody {
+      overflow-y: scroll;
+      
+      &::-webkit-scrollbar {
+        width: 16px;
+
+        &-corner { 
+          background: #c0c0c0;
+        }
+        
+        &-thumb {
+          @include volume;
+        }
+
+        &-track {
+          background-blend-mode: normal, difference, normal;
+          background-size: 3px 3px;
+          background-image: 
+            linear-gradient(to right, rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)),
+            linear-gradient(to right, black 50%, white 50%),
+            linear-gradient(to bottom, black 50%, white 50%);
+        }
+      }
+    }
+  }
 }
 
 .header {
