design. abount cursor 추가

--- a/src/components/molecules/AboutSlide/AboutSlide.module.scss
+++ b/src/components/molecules/AboutSlide/AboutSlide.module.scss
@@ -27,6 +27,8 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
       &:last-child {
         margin-top: 10px;
         max-width: 18px;
+
+        animation: arrow ease-in 0.6s infinite;
       }
     }
   }
@@ -101,5 +103,19 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
         opacity: 0;
       }
     }
+  }
+}
+
+@keyframes arrow {
+  0% {
+    margin-top: 6px;
+  }
+
+  50% {
+    margin-top: 10px;
+  }
+
+  100% {
+    margin-top: 6px;
   }
 }
