--- a/src/components/templates/About/About.module.scss
+++ b/src/components/templates/About/About.module.scss
@@ -39,6 +39,34 @@
       top: -88px;
       left: 0;
       width: 100%;
+
+      &::after {
+        position: absolute;
+        top: -50px;
+        left: 50%;
+        margin-left: -26px;
+        transform: rotate(180deg);
+        content: "";
+        width: 40px;
+        height: 50px;
+        background: 100% / contain url(/src/assets/images/cursor.png) no-repeat;
+        animation: cursor 1s linear infinite;
+      }
     }
   }
+}
+
+@keyframes cursor {
+  0% {
+    top: -60px;
+  }
+
+  30% {
+    top: -50px;
+  }
+
+  100% {
+    top: -60px;
+  }
+
 }
