--- a/src/components/atoms/TabMenu/TabMenu.module.scss
+++ b/src/components/atoms/TabMenu/TabMenu.module.scss
@@ -1,11 +1,35 @@
 .wrap {
+  .buttons {
+    display: flex;
+    padding-top: 5px;
+  }
   button {
-    background-color: transparent;
-    border: none;
+    position: relative;
+    bottom: -1px;
+    left: 0;
+    padding: 5px 8px;
+    float: left;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-radius: 3px 3px 0 0;
+    border-right: 2px solid #666;
+    margin: 0;
+
+    &:first-child {
+      border-left: 1px solid #fff;
+    }
 
     &.active {
-      background-color: #fff;
+      border-bottom: 1px solid #c0c0c0;
+      padding-top: 7px;
+      margin-top: -2px;
+      
     }  
   }  
 
+  .contents {
+    padding: 15px;
+    border: 1px solid #fff;
+    // border-top: none;
+  }
 }
