--- a/src/components/atoms/SkillBook/SkillBook.module.scss
+++ b/src/components/atoms/SkillBook/SkillBook.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 10px 6px;
+    padding: 10px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 4px;
 
