--- a/src/components/molecules/ImageSwiper/ImageSwiper.module.scss
+++ b/src/components/molecules/ImageSwiper/ImageSwiper.module.scss
@@ -6,4 +6,12 @@
   height: 154px;
   background: #fff;
   transform: translateX(-50%);
+
+  .imageSlide {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
