--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -90,6 +90,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   color: #fff;
   font-weight: 300;
   background: linear-gradient(90deg, #000b7c, #377cc6);
+  border-bottom: 1px solid #c0c0c0;
 
   .modalTitle {
     font-size: 12px;
