--- a/src/components/atoms/TabMenu/TabMenu.module.scss
+++ b/src/components/atoms/TabMenu/TabMenu.module.scss
@@ -1,4 +1,6 @@
 .wrap {
+  padding: 2px 4px;
+  
   .buttons {
     display: flex;
     padding-top: 5px;
@@ -23,6 +25,7 @@
       border-bottom: 1px solid #c0c0c0;
       padding-top: 7px;
       margin-top: -2px;
+      text-shadow: rgb(0, 0, 0) -0.2px 0px, rgb(0, 0, 0) 0px 0.2px, rgb(0, 0, 0) 0.2px 0px, rgb(0, 0, 0) 0px -0.2px;
       
     }  
   }  
@@ -30,6 +33,5 @@
   .contents {
     padding: 15px;
     border: 1px solid #fff;
-    // border-top: none;
   }
 }
