--- a/src/components/atoms/PixelTitle/PixelTitle.module.scss
+++ b/src/components/atoms/PixelTitle/PixelTitle.module.scss
@@ -3,5 +3,5 @@
   font-size: 4rem;
   font-weight: 500;
   font-family: "VT323", monospace;
-  text-shadow: -4px 0 #000, 0 4px #000, 4px 0 #000, 0 -4px #000;
+  filter: drop-shadow(2px 4px 6px #589cdc);
 }
