--- a/src/components/molecules/PortfolioSlide/PortfolioSlide.module.scss
+++ b/src/components/molecules/PortfolioSlide/PortfolioSlide.module.scss
@@ -114,6 +114,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
     bottom: 54px;
     background-color: #fff;
     color: rgba(0, 0, 0, 0.6);
+    font-size: 14px;
   }
 }
 
