--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -51,8 +51,8 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   }
 
   &.full {
-    max-width: 90%;
-    width: 1024px;
+    width: 90%;
+    max-width: 1024px;
     height: 90%;
 
     .modalBody {
