--- a/src/components/templates/Loading/Loading.module.scss
+++ b/src/components/templates/Loading/Loading.module.scss
@@ -1,14 +1,21 @@
 $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
 
 .wrap {
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100vh;
+  background-color: #fff;
 
-  opacity: 0;
-  animation: fadeOut ease-in-out 4.9s;
+  opacity: 1;
+  animation: fadeOut ease-in-out 5s;
 
   span {
     display: block;
