--- a/src/components/templates/About/About.module.scss
+++ b/src/components/templates/About/About.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   width: 100%;
   height: 152px;
-  background-image: url(/src/assets/images/block.png);
+  background-image: url(/src/static/images/block.png);
   background-size: contain;
 
   &::after {
@@ -17,7 +17,7 @@
     top: -44px;
     width: 70px;
     height: 50px;
-    background-image: url(/src/assets/images/cat.png);
+    background-image: url(/src/static/images/cat.png);
   }
 
   .button {
@@ -26,12 +26,12 @@
     margin-left: 20%;
     width: 300px;
     height: 110px;
-    background: url(/src/assets/images/eunjee_photo.png) 100% no-repeat;
+    background: url(/src/static/images/eunjee_photo.png) 100% no-repeat;
     border: none;
     transition: ease-in 0.3s;
     
     &:hover {
-      background-image: url(/src/assets/images/eunjee_photo_hover.png);
+      background-image: url(/src/static/images/eunjee_photo_hover.png);
     }
 
     strong {
@@ -49,7 +49,7 @@
         content: "";
         width: 40px;
         height: 50px;
-        background: 100% / contain url(/src/assets/images/cursor.png) no-repeat;
+        background: 100% / contain url(/src/static/images/cursor.png) no-repeat;
         animation: cursor 1s linear infinite;
       }
     }
