--- a/src/components/molecules/Track/Track.module.scss
+++ b/src/components/molecules/Track/Track.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 187px;
-  background-image: url("/src/static/images/track.png");
+  background-image: url("/public/images/track.png");
 
   .startLine {
     position: absolute;
@@ -10,6 +10,6 @@
     left: 180px;
     width: 100%;
     height: 100%;
-    background: url("/src/static/images/start_line.png") no-repeat;
+    background: url("/public/images/start_line.png") no-repeat;
   }
 }
