fix. image, mock 경로 수정

--- a/src/components/organisms/HomeModalContent/HomeModalContent.module.scss
+++ b/src/components/organisms/HomeModalContent/HomeModalContent.module.scss
@@ -11,7 +11,7 @@
     bottom: 0;
     width: 60px;
     height: 35px;
-    background: 100% / cover url(/public/images/cat.png) no-repeat;
+    background: 100% / cover url(/images/cat.png) no-repeat;
     transform: scale(-1, 1);
   }
 }
