--- a/src/components/molecules/Background/Background.module.scss
+++ b/src/components/molecules/Background/Background.module.scss
@@ -16,7 +16,7 @@
     position: relative;
     width: 100%;
     height: 187px;
-    background-image: url("/public/images/track.png");
+    background-image: url("/images/track.png");
 
     .startLine {
       position: absolute;
@@ -24,7 +24,7 @@
       left: 180px;
       width: 100%;
       height: 100%;
-      background: url("/public/images/start_line.png") no-repeat;
+      background: url("/images/start_line.png") no-repeat;
     }
   }
 }
