--- a/src/components/templates/Home/Home.module.scss
+++ b/src/components/templates/Home/Home.module.scss
@@ -21,14 +21,14 @@
       min-height: 100px;
       width: 12%;
       height: 25%;
-      background-image: url("/public/images/sun.png");
+      background-image: url("/images/sun.png");
 
       &::after {
         top: 30px;
         left: 80px;
         width: 200px;
         height: 120px;
-        background-image: url("/public/images/cloud_1.png");
+        background-image: url("/images/cloud_1.png");
       }
     }
 
@@ -37,21 +37,21 @@
         margin-left: 160px;
         width: 76px;
         height: 49px;
-        background-image: url("/public/images/cloud_3.png");
+        background-image: url("/images/cloud_3.png");
       }
 
       &_2 {
         position: relative;
         width: 200px;
         height: 100px;
-        background-image: url("/public/images/cloud_2.png");
+        background-image: url("/images/cloud_2.png");
 
         &::after {
           right: -46px;
           top: 44px;
           width: 50px;
           height: 44px;
-          background-image: url("/public/images/cloud_4.png");
+          background-image: url("/images/cloud_4.png");
         }
       }
 
@@ -60,7 +60,7 @@
         margin-left: 70px;
         width: 230px;
         height: 120px;
-        background-image: url("/public/images/cloud_1.png");
+        background-image: url("/images/cloud_1.png");
       }
 
       &_4 {
@@ -68,14 +68,14 @@
         margin-top: 30px;
         width: 200px;
         height: 100px;
-        background-image: url("/public/images/cloud_2.png"); 
+        background-image: url("/images/cloud_2.png"); 
 
         &::after {
           top: 4px;
           right: -8px;
           width: 39px;
           height: 25px;
-          background-image: url("/public/images/cloud_4.png");
+          background-image: url("/images/cloud_4.png");
         }
       }
     }
