--- a/src/components/templates/Portfolio/Portfolio.module.scss
+++ b/src/components/templates/Portfolio/Portfolio.module.scss
@@ -24,7 +24,7 @@
     content: "";
     width: 40px;
     height: 50px;
-    background: 100% / contain url(/public/images/cursor.png) no-repeat;
+    background: 100% / contain url(/images/cursor.png) no-repeat;
     animation: cursor 1s linear infinite;
   }
 }
