--- a/src/components/molecules/Tabs/Level2/Level2.module.scss
+++ b/src/components/molecules/Tabs/Level2/Level2.module.scss
@@ -4,7 +4,7 @@
   gap: 6px;
   justify-content: flex-end;
   align-items: center;
-  font-family: "VT323", monospace;
+  font-family: "VT", monospace;
   color: #666;
   
   span {
