--- a/src/components/organisms/GoalModalContent/GoalModalContent.module.scss
+++ b/src/components/organisms/GoalModalContent/GoalModalContent.module.scss
@@ -61,7 +61,7 @@
       font-size: 19px;
       color: #fff;
       text-decoration: none;
-      font-family: "VT323", monospace;
+      font-family: "VT", monospace;
       background: 100% / cover url(/images/skill_frame.png) no-repeat #afd4ff;
       filter: grayscale(100%);
       transition: ease-in 0.2s;
