--- a/src/components/atoms/PixelTitle/PixelTitle.module.scss
+++ b/src/components/atoms/PixelTitle/PixelTitle.module.scss
@@ -2,6 +2,6 @@
   color: #fff;
   font-size: 4rem;
   font-weight: 500;
-  font-family: "VT323", monospace;
+  font-family: "VT", monospace;
   filter: drop-shadow(2px 4px 6px #589cdc);
 }
