--- a/src/components/atoms/SkillBox/SkillBox.module.scss
+++ b/src/components/atoms/SkillBox/SkillBox.module.scss
@@ -24,7 +24,7 @@
       text-align: center;
       line-height: 1;
       word-break: break-all;
-      font-family: "VT323", monospace;
+      font-family: "VT", monospace;
     }
 
     img {
