--- a/src/components/organisms/Pagination/Pagination.module.scss
+++ b/src/components/organisms/Pagination/Pagination.module.scss
@@ -9,7 +9,7 @@
   gap: 6px;
   width: 100%;
   height: 84px;
-  font-family: "VT323", monospace;
+  font-family: "VT", monospace;
   background-color: gray;
 
   ul {
