design. portfolio 모달 화면 깨지는 것 수정

--- a/src/components/organisms/PortfolioModalContent/PortfolioModalContent.module.scss
+++ b/src/components/organisms/PortfolioModalContent/PortfolioModalContent.module.scss
@@ -13,8 +13,12 @@
   }
 
   .centerImage {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
     margin: 0 auto;
-    max-width: 364px;
+    width: 364px;
     img {
       width: 100%;
     }
