design. modal full size height 수정

--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -54,6 +54,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
     width: 90%;
     max-width: 1024px;
     height: 90%;
+    max-height: 710px;
 
     .modalBody {
       overflow-y: scroll;
