design. about 모달 캐릭터 css 수정

--- a/src/components/organisms/AboutModalContent/AboutModalContent.module.scss
+++ b/src/components/organisms/AboutModalContent/AboutModalContent.module.scss
@@ -13,7 +13,9 @@
   }
 
   .centerImage {
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .slide {
