--- a/src/components/molecules/PortfolioSlide/PortfolioSlide.module.scss
+++ b/src/components/molecules/PortfolioSlide/PortfolioSlide.module.scss
@@ -1,4 +1,7 @@
-$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
+$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
+  -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,
+  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black,
+  4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
 
 .wrap {
   padding: 20px;
@@ -14,13 +17,10 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   grid-template-columns: repeat(7, 14.28%);
   grid-template-rows: 192px 48px;
   width: 100%;
-  height:100%;
+  height: 100%;
 
   .icon {
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    gap: 6px;
+    display: none;
 
     img {
       display: block;
@@ -37,7 +37,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   .mySwiper {
     width: 100%;
     height: 100%;
-    grid-column: auto / span 6;
+    grid-column: auto / span 7;
     background-color: #fff;
     border: 1px solid rgb(118, 118, 118);
     padding: 10px;
@@ -49,7 +49,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
       strong {
         font-weight: 600;
       }
-      
+
       h3 {
         margin-bottom: 14px;
         border-bottom: 1px solid rgb(118, 118, 118);
@@ -61,8 +61,8 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
         flex-direction: column;
 
         li {
-        position: relative;
-        margin-left: 13px;        
+          position: relative;
+          margin-left: 13px;
 
           &::before {
             position: absolute;
@@ -110,9 +110,8 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   .pagination {
     z-index: 1;
     position: absolute;
-    right: 9px;
-    bottom: 54px;
-    background-color: #fff;
+    bottom: 3px;
+    left: calc(50% - 18px);
     color: rgba(0, 0, 0, 0.6);
     font-size: 14px;
   }
@@ -129,5 +128,25 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
 
   100% {
     margin-top: 6px;
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .grid {
+    .icon {
+      display: flex;
+      flex-direction: row;
+      align-items: start;
+      gap: 6px;
+    }
+    .mySwiper {
+      grid-column: auto / span 6;
+    }
+    .pagination {
+      left: inherit;
+      right: 9px;
+      bottom: 54px;
+      background-color: #fff;
+    }
   }
 }
