--- a/src/components/atoms/Modal/Modal.module.scss
+++ b/src/components/atoms/Modal/Modal.module.scss
@@ -1,4 +1,7 @@
-$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
+$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
+  -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,
+  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black,
+  4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
 
 @mixin volume {
   background-color: #c0c0c0;
@@ -46,26 +49,24 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   box-shadow: $box-shadow;
 
   &.normal {
-    max-width: 640px;
-    max-height: 480px;
+    max-width: calc(100% - 10px);
+    max-height: calc(100vh - 10px);
   }
 
   &.full {
-    width: 90%;
-    max-width: 1024px;
-    height: 90%;
-    max-height: 710px;
+    max-width: calc(100% - 10px);
+    max-height: calc(100vh - 10px);
 
     .modalBody {
       overflow-y: scroll;
-      
+
       &::-webkit-scrollbar {
         width: 16px;
 
-        &-corner { 
+        &-corner {
           background: #c0c0c0;
         }
-        
+
         &-thumb {
           @include volume;
         }
@@ -73,8 +74,11 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
         &-track {
           background-blend-mode: normal, difference, normal;
           background-size: 3px 3px;
-          background-image: 
-            linear-gradient(to right, rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)),
+          background-image: linear-gradient(
+              to right,
+              rgba(255, 255, 255, 0.75),
+              rgba(255, 255, 255, 0.75)
+            ),
             linear-gradient(to right, black 50%, white 50%),
             linear-gradient(to bottom, black 50%, white 50%);
         }
@@ -114,7 +118,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
 
       &::before {
         position: absolute;
-        content: '';
+        content: "";
         background: black;
       }
 
@@ -128,7 +132,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
         &::before,
         &::after {
           position: absolute;
-          content: '';
+          content: "";
           width: 0.3rem;
           height: 0.25rem;
           border: 2px solid black;
@@ -180,7 +184,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   justify-content: flex-end;
   gap: 5px;
   margin-right: 16px;
-  
+
   button {
     cursor: pointer;
     width: 75px;
@@ -190,5 +194,21 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
     border-top-color: #fff;
     border-left-color: #fff;
     background: #c0c0c0;
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .modalContent {
+    &.normal {
+      max-width: 640px;
+      max-height: 480px;
+    }
+
+    &.full {
+      width: 90%;
+      max-width: 1024px;
+      height: 90%;
+      max-height: 710px;
+    }
   }
 }
