--- a/src/components/molecules/Background/Background.module.scss
+++ b/src/components/molecules/Background/Background.module.scss
@@ -2,13 +2,18 @@
   width: 100%;
   height: 100%;
   background-color: #589cdc;
-  
+
   .homeSlide {
     position: relative;
-    height: calc(100% - 187px);  
+    height: calc(100% - 187px);
 
     &.gradient {
-      background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(10,105,184,1) 0%, rgba(10,105,184,0) 39%);
+      background: linear-gradient(
+        0deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(10, 105, 184, 1) 0%,
+        rgba(10, 105, 184, 0) 39%
+      );
     }
   }
 
@@ -21,10 +26,16 @@
     .startLine {
       position: absolute;
       top: 0;
-      left: 180px;
+      left: 100px;
       width: 100%;
       height: 100%;
       background: url("/images/start_line.png") no-repeat;
     }
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .startLine {
+    left: 180px;
   }
 }
