--- a/src/components/molecules/ImageSwiper/ImageSwiper.module.scss
+++ b/src/components/molecules/ImageSwiper/ImageSwiper.module.scss
@@ -1,9 +1,9 @@
 .imageSwiper {
   position: absolute;
-  top: 12.4%;
+  top: 11.4%;
   left: 50%;
-  max-width: 258px;
-  height: 154px;
+  max-width: 190px;
+  height: 110px;
   background: #fff;
   transform: translateX(-50%);
 
@@ -13,5 +13,13 @@
       height: 100%;
       object-fit: cover;
     }
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .imageSwiper {
+    top: 12.4%;
+    max-width: 258px;
+    height: 154px;
   }
 }
