--- a/src/components/organisms/AboutModalContent/AboutModalContent.module.scss
+++ b/src/components/organisms/AboutModalContent/AboutModalContent.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-height: 328px;
+    max-height: 49%;
     height: 100%;
   }
 
@@ -20,5 +20,13 @@
 
   .slide {
     padding: 20px;
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .wrap {
+    .screen {
+      max-height: 328px;
+    }
   }
 }
