--- a/src/components/organisms/PortfolioModalContent/PortfolioModalContent.module.scss
+++ b/src/components/organisms/PortfolioModalContent/PortfolioModalContent.module.scss
@@ -18,7 +18,7 @@
     left: 50%;
     transform: translateX(-50%);
     margin: 0 auto;
-    width: 364px;
+    width: 250px;
     img {
       width: 100%;
     }
@@ -26,5 +26,13 @@
 
   .slide {
     padding: 20px;
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .wrap {
+    .centerImage {
+      width: 364px;
+    }
   }
 }
