--- a/src/components/templates/Goal/Goal.module.scss
+++ b/src/components/templates/Goal/Goal.module.scss
@@ -2,7 +2,8 @@
   z-index: 1;
   position: absolute;
   bottom: -14px;
-  left: 50%;
+  left: inherit;
+  right: 5%;
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -58,7 +59,7 @@
 
 @keyframes i {
   0% {
-      margin-top: -20px;
+    margin-top: -20px;
   }
 
   50% {
@@ -109,5 +110,12 @@
 
   100% {
     margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .modal {
+    left: 50%;
+    right: inherit;
   }
 }
