docs. 기능 추가로 인한 PC, Mobile 이동 방향 설명 문구 수정

--- a/src/components/organisms/HomeModalContent/HomeModalContent.module.scss
+++ b/src/components/organisms/HomeModalContent/HomeModalContent.module.scss
@@ -29,11 +29,11 @@
   }
 
   .textBackground,
-  .textUnderline {
+  .textBold {
     background-color: #ffdc9b;
   }
 
-  .textUnderline {
+  .textBold {
     font-weight: 600;
   }
 }
