refactor. 시멘틱 태그 추가 및 css 수정

--- a/src/components/templates/About/About.module.scss
+++ b/src/components/templates/About/About.module.scss
@@ -34,7 +34,8 @@
       background-image: url(/images/eunjee_photo_hover.webp);
     }
 
-    strong {
+    strong,
+    h2 {
       position: absolute;
       top: -88px;
       left: 0;
