--- a/src/components/templates/Goal/Goal.module.scss
+++ b/src/components/templates/Goal/Goal.module.scss
@@ -9,7 +9,8 @@
   justify-self: center;
   align-items: center;
 
-  > strong {
+  > strong,
+  > h2 {
     margin-bottom: 100px;
     width: 228px;
     text-align: center;
