--- a/src/components/atoms/SkillBook/SkillBook.module.scss
+++ b/src/components/atoms/SkillBook/SkillBook.module.scss
@@ -1,10 +1,10 @@
 .wrap {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 4px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
 
   .skillBook {
     position: relative;
@@ -13,14 +13,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-  
-    span {
+
+    h3 {
       font-size: 14px;
       font-family: "VT", monospace;
       z-index: 1;
       position: relative;
     }
-  
+
     img {
       position: absolute;
       display: block;
@@ -28,10 +28,10 @@
       height: 100%;
     }
   }
-  
+
   .description {
     width: calc(100% - 60px);
-    color:#666;
+    color: #666;
     font-family: "VT", monospace;
     font-size: 18px;
   }
