--- a/src/components/templates/Loading/Loading.module.scss
+++ b/src/components/templates/Loading/Loading.module.scss
@@ -1,4 +1,7 @@
-$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white, -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black, 4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
+$box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
+  -4px 0 white, 0 -4px white, 2px 2px #818181, 0 2px #818181, 2px 0 #818181,
+  2px -2px #e0dede, -2px 2px #818181, -4px 2px white, -4px 4px black,
+  4px 4px black, 4px 0 black, 0 4px black, 2px -4px white, 4px -4px black;
 
 .wrap {
   z-index: 2;
@@ -16,6 +19,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
 
   opacity: 1;
   animation: fadeOut ease-in-out 3.6s;
+  animation-iteration-count: 1;
 
   span {
     display: block;
@@ -24,7 +28,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
   }
 }
 
-.window {  
+.window {
   margin: 0.5rem;
   max-width: 640px;
   max-height: 280px;
@@ -60,7 +64,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
 
       &::before {
         position: absolute;
-        content: '';
+        content: "";
         background: black;
       }
 
@@ -74,7 +78,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
         &::before,
         &::after {
           position: absolute;
-          content: '';
+          content: "";
           width: 0.3rem;
           height: 0.25rem;
           border: 2px solid black;
@@ -125,7 +129,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
     border: 2px inset;
     height: 1.5rem;
     margin: 1rem 0;
-    display: flex; 
+    display: flex;
 
     li {
       background: #000b7c;
@@ -133,7 +137,7 @@ $box-shadow: -2px -2px #e0dede, -2px 0 #e0dede, 0 -2px #e0dede, -4px -4px white,
       width: 1.28rem;
       margin: 0.125rem;
       opacity: 0;
-      transition: opacity 0.5s ease-in-out; 
+      transition: opacity 0.5s ease-in-out;
 
       &.active {
         opacity: 1;
