design. Start 모달 css 수정

--- a/src/components/organisms/HomeModalContent/HomeModalContent.module.scss
+++ b/src/components/organisms/HomeModalContent/HomeModalContent.module.scss
@@ -28,12 +28,7 @@
     font-weight: 500;
   }
 
-  .textBackground,
-  .textBold {
+  .textBackground {
     background-color: #ffdc9b;
-  }
-
-  .textBold {
-    font-weight: 600;
   }
 }
