desgin. home 모달 버튼 이미지 위치 수정

--- a/src/components/templates/Home/Home.module.scss
+++ b/src/components/templates/Home/Home.module.scss
@@ -91,9 +91,11 @@
   .openModalButton {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
 
     img {
       display: block;
+      object-fit: contain;
 
       &.speechBubble {
         animation: fade 1s linear infinite;
